--- a/Code/app/src/main/res/layout/fragment_edit_user.xml
+++ b/Code/app/src/main/res/layout/fragment_edit_user.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black">
 
     <ImageButton
         android:id="@+id/img_QuayLai"
@@ -193,21 +194,25 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/edt_Ngaysinh"
-        app:layout_constraintTop_toBottomOf="@+id/edt_Ngaysinh">
+        app:layout_constraintTop_toBottomOf="@+id/edt_Ngaysinh"
+        >
 
         <RadioButton
             android:id="@+id/rb_Nam"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/Male" />
+            android:text="@string/Male"
+            android:textColor="@color/white" />
 
         <RadioButton
             android:id="@+id/rb_nu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/Female" />
+            android:text="@string/Female"
+            android:textColor="@color/white"
+            />
     </RadioGroup>
 
 
