--- a/Code/app/src/main/res/values/colors.xml
+++ b/Code/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="transparent">#00FFFFFF</color>
     <color name="black_transparent">#23161616</color>
     <color name="yellow">#F0DD1E</color>
+    <color name="black">#000</color>
 </resources>
