--- a/Code/app/src/main/res/layout/fragment_item_video.xml
+++ b/Code/app/src/main/res/layout/fragment_item_video.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -9,6 +10,7 @@
         android:id="@+id/videoviewVertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/transparent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -31,6 +33,8 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:src="@drawable/icon_music"
+
+        android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toBottomOf="@+id/videoviewVertical"
         app:layout_constraintRight_toRightOf="@+id/videoviewVertical"
         />
