--- a/Code/app/src/main/res/layout/fragment_sharesocial_video.xml
+++ b/Code/app/src/main/res/layout/fragment_sharesocial_video.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tvShareVideoWith"
@@ -16,5 +15,42 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvSaveSocial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:drawableTop="@drawable/icon_download_video"
+        android:text="Lưu video"
+        app:layout_constraintEnd_toStartOf="@+id/tvAddToSocialFavourite"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvShareVideoWith" />
+
+    <TextView
+        android:id="@+id/tvAddToSocialFavourite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:drawableTop="@drawable/icon_favourite_video"
+        android:text="Thêm vào ưa thích"
+        app:layout_constraintEnd_toStartOf="@+id/tvSocialNoCare"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/tvSaveSocial"
+        app:layout_constraintTop_toBottomOf="@+id/tvShareVideoWith" />
+
+    <TextView
+        android:id="@+id/tvSocialNoCare"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:drawableTop="@drawable/icon_nocare_video"
+        android:text="Không quan tâm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/tvAddToSocialFavourite"
+        app:layout_constraintTop_toBottomOf="@+id/tvShareVideoWith" />
+
 
 </android.support.constraint.ConstraintLayout>
