--- a/Code/app/src/main/res/layout/fragment_verticalvp.xml
+++ b/Code/app/src/main/res/layout/fragment_verticalvp.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <vn.edu.httpgreenacademy.vuivc.VerticalViewPager
+    <vn.edu.httpgreenacademy.vuivc.ViewPager.VerticalViewPager
         android:id="@+id/verticalviewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -13,6 +13,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-    </vn.edu.httpgreenacademy.vuivc.VerticalViewPager>
+    </vn.edu.httpgreenacademy.vuivc.ViewPager.VerticalViewPager>
 
 </android.support.constraint.ConstraintLayout>
