--- a/Code/app/src/main/res/layout/fragment_yeuthich.xml
+++ b/Code/app/src/main/res/layout/fragment_yeuthich.xml
@@ -50,7 +50,7 @@
         android:gravity="center"
         android:text="@string/yeuthich"
         app:layout_constraintBottom_toBottomOf="@+id/BT_YeuThich_Back"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imgCheAnh"
         app:layout_constraintStart_toEndOf="@+id/BT_YeuThich_Back"
         app:layout_constraintTop_toTopOf="@+id/BT_YeuThich_Back" />
 
@@ -65,5 +65,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/back" />
+
+    <ImageView
+        android:id="@+id/imgCheAnh"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/TXT_YeuThich"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/TXT_YeuThich"
+        app:srcCompat="@drawable/setting" />
 
 </android.support.constraint.ConstraintLayout>
