--- a/Code/app/src/main/res/values/colors.xml
+++ b/Code/app/src/main/res/values/colors.xml
@@ -6,8 +6,9 @@
     <color name="Txt_Facebook">#1CD2FD</color>
     <color name="Txt_Google">#d84736</color>
     <color name="Txt_Chu">#FFFFFF</color>
-    <color name="Bt_Login">#1f7bf4</color>
+    <color name="Bt_Login">#1F7BF4</color>
     <color name="Bt_Register">#b52e1c</color>
     <color name="Txt_Error">#FA0000</color>
     <color name="Mau_Button">#32aea2a2</color>
+    <color name="txtchuden">#000000</color>
 </resources>
