--- a/Code/app/src/main/res/layout/comment_fragment.xml
+++ b/Code/app/src/main/res/layout/comment_fragment.xml
@@ -14,62 +14,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageViewLike"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageViewSao"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/editTextComment"
-        app:layout_constraintTop_toTopOf="@+id/editTextComment"
-        app:srcCompat="@drawable/icon_like" />
-
-    <ImageView
-        android:id="@+id/imageViewSao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewLike"
-        app:layout_constraintEnd_toStartOf="@+id/imageViewSao2"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageViewLike"
-        app:layout_constraintTop_toTopOf="@+id/imageViewLike"
-        app:srcCompat="@drawable/icon_sao" />
-
-    <ImageView
-        android:id="@+id/imageViewSao2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewSao"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageViewSao"
-        app:layout_constraintTop_toTopOf="@+id/imageViewSao"
-        app:srcCompat="@drawable/resources_images_icons_ic_stars_yellow_24px" />
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewComment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextComment"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewQuit" />
+        app:layout_constraintTop_toBottomOf="@+id/imageViewQuit"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageViewQuit"
@@ -81,4 +39,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/icon_x" />
+
+    <ImageView
+        android:id="@+id/imageViewA"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageViewEmotion"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/editTextComment"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewComment"
+        app:srcCompat="@drawable/icon_a" />
+
+    <ImageView
+        android:id="@+id/imageViewEmotion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageViewA"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerViewComment"
+        app:srcCompat="@drawable/icon_emotion_gray" />
+
 </android.support.constraint.ConstraintLayout>
