--- a/Code/app/src/main/res/layout/fragment_home.xml
+++ b/Code/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,12 @@
         android:id="@+id/tabLayoutHome"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@color/transparent"
+        app:tabMode="fixed"
+        app:tabGravity="fill"
+        app:tabBackground="@android:color/transparent"
+        app:tabIndicatorColor="@android:color/transparent"
+        app:tabIndicatorHeight="4dp"
+        android:background="@android:color/transparent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
