--- a/Code/app/src/main/res/layout/fragment_share_video.xml
+++ b/Code/app/src/main/res/layout/fragment_share_video.xml
@@ -2,6 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@android:color/transparent"
+    android:hapticFeedbackEnabled="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
