--- a/Code/app/src/main/res/drawable/bg_textview_follow.xml
+++ b/Code/app/src/main/res/drawable/bg_textview_follow.xml
@@ -13,5 +13,6 @@
     <stroke
         android:width="2dp"
         android:color="#FFFFFF" />
+    <solid android:color="@color/Bt_Register"/>
 
 </shape>
