--- a/Code/app/src/main/res/layout/fragment_profileuser_main.xml
+++ b/Code/app/src/main/res/layout/fragment_profileuser_main.xml
@@ -11,8 +11,8 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:orientation="horizontal"
-            android:layout_height="140dp"
-            android:background="@color/Bt_Register"
+            android:layout_height="160dp"
+            android:background="@drawable/bg"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"></LinearLayout>
@@ -21,56 +21,60 @@
         android:id="@+id/imgbtn_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/bg_circle_border"
+        android:background="@color/transparent"
         android:contentDescription="@string/image_setting"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/settings"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        app:srcCompat="@drawable/menu" />
 
-<FrameLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/frlo"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="120dp"
-    android:layout_marginEnd="8dp"
-    app:layout_constraintEnd_toStartOf="@+id/imgbtn_setting"
-    app:layout_constraintHorizontal_bias="0.174"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" >
+    <ImageButton
+        android:id="@+id/imgbtn_addfriend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:background="@color/transparent"
+        android:contentDescription="@string/image_setting"
+        app:layout_constraintBottom_toBottomOf="@+id/imgbtn_setting"
+        app:layout_constraintEnd_toStartOf="@+id/imgbtn_setting"
+        app:layout_constraintTop_toTopOf="@+id/imgbtn_setting"
+        app:srcCompat="@drawable/add_user" />
 
-    <ImageView
-        android:layout_width="110sp"
-        android:layout_height="110sp"
-        android:background="@drawable/bg_circle"/>
+    <FrameLayout
+        android:id="@+id/frlo"
+        android:layout_width="106dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8sp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="8sp"
+        app:layout_constraintEnd_toStartOf="@+id/imgbtn_setting"
+        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imgAnhUser"
-        android:layout_width="100sp"
-        android:layout_height="100sp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/af"
-        app:civ_border_color="#fff"
-        app:civ_border_width="2dp"
-        android:layout_gravity="center"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgAnhUser"
+            android:layout_width="110sp"
+            android:layout_height="110sp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/af"
+            app:civ_border_color="@color/black"
+            app:civ_border_width="5dp" />
 
-</FrameLayout>
+    </FrameLayout>
+
     <TextView
         android:id="@+id/txtTenUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:text="a"
         android:textColor="@color/white"
         android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/frlo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/frlo"
-        app:layout_constraintTop_toTopOf="@+id/frlo" />
+        app:layout_constraintEnd_toEndOf="@+id/frlo"
+        app:layout_constraintStart_toStartOf="@+id/frlo"
+        app:layout_constraintTop_toBottomOf="@+id/frlo" />
 
     <TextView
         android:id="@+id/txtID"
@@ -86,11 +90,11 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="54dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="30sp"
+        android:layout_marginTop="10sp"
         android:layout_marginEnd="8dp"
-        android:background="@color/black_transparent"
+        android:background="@color/Mau_Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtID">
@@ -253,4 +257,19 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/bg_textview_follow"
+        android:gravity="center"
+        android:text="@string/follow"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/imgbtn_addfriend"
+        app:layout_constraintEnd_toStartOf="@+id/imgbtn_addfriend"
+        app:layout_constraintStart_toEndOf="@+id/frlo"
+        app:layout_constraintTop_toTopOf="@+id/imgbtn_addfriend" />
 </android.support.constraint.ConstraintLayout>
