--- a/Code/app/src/main/res/values/colors.xml
+++ b/Code/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="transparent">#00FFFFFF</color>
     <color name="black_transparent">#23161616</color>
     <color name="yellow">#F0DD1E</color>
-    <color name="black">#000</color>
+    <color name="black">#201E1E</color>
+    <color name="Xam_transparent">#11AEA2A2</color>
 </resources>
