Commit show video caption

--- a/Code/app/src/main/res/layout/fragment_item_video.xml
+++ b/Code/app/src/main/res/layout/fragment_item_video.xml
@@ -10,17 +10,42 @@
         android:id="@+id/videoviewVertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/transparent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
        />
+
+    <TextView android:id="@+id/tvUploaderName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="5dp"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:text="Administrator"
+        app:layout_constraintLeft_toLeftOf="@+id/tvVideoName"
+        app:layout_constraintRight_toRightOf="@+id/tvVideoName"
+        app:layout_constraintBottom_toTopOf="@+id/tvVideoName"
+        >
+
+    </TextView>
 
     <TextView
         android:id="@+id/tvVideoName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="abc"
+        android:layout_margin="10dp"
+        android:padding="5dp"
+        android:text="sssssssssssssssssssssssssssssss"
         android:textColor="@android:color/white"
+        android:textSize="18dp"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+       android:scrollHorizontally="true"
+        android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="@+id/videoviewVertical"
         app:layout_constraintLeft_toLeftOf="@+id/videoviewVertical"
         app:layout_constraintRight_toRightOf="@+id/videoviewVertical"
@@ -30,12 +55,11 @@
         android:id="@+id/imvMusic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:src="@drawable/icon_music"
-
-        android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toBottomOf="@+id/videoviewVertical"
-        app:layout_constraintRight_toRightOf="@+id/videoviewVertical"
+        android:padding="5dp"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintBottom_toTopOf="@+id/tvVideoName"
+        app:layout_constraintRight_toRightOf="@+id/tvVideoName"
         />
 
     <ImageView
@@ -43,9 +67,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon_share"
-        android:padding="10dp"
+        android:padding="5dp"
         app:layout_constraintBottom_toTopOf="@+id/imvMusic"
-        app:layout_constraintRight_toRightOf="@+id/videoviewVertical"
+        app:layout_constraintRight_toRightOf="@+id/imvMusic"
         />
 
     <ImageView
@@ -53,9 +77,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon_cmment"
-        android:padding="10dp"
+        android:padding="5dp"
         app:layout_constraintBottom_toTopOf="@+id/imvShare"
-        app:layout_constraintRight_toRightOf="@+id/videoviewVertical"
+        app:layout_constraintRight_toRightOf="@+id/imvShare"
         />
 
     <ImageView
@@ -63,9 +87,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/icon_heart"
-        android:padding="10dp"
+        android:padding="5dp"
         app:layout_constraintBottom_toTopOf="@+id/imvComment"
-        app:layout_constraintRight_toRightOf="@+id/videoviewVertical"
+        app:layout_constraintRight_toRightOf="@+id/imvComment"
+        />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imvAvatarUpload"
+        android:padding="5dp"
+        android:src="@drawable/icon_video_avatar"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toTopOf="@+id/imvLike"
+        app:layout_constraintRight_toRightOf="@+id/imvLike"
         />
 
 
