hoàn thiện yêu thích

--- a/Code/app/src/main/res/layout/item_video.xml
+++ b/Code/app/src/main/res/layout/item_video.xml
@@ -17,17 +17,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <pl.droidsonroids.gif.GifImageView
             android:id="@+id/imgvideo"
             android:layout_width="125dp"
             android:layout_height="125dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imgplay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="45dp"
+            android:layout_margin="55dp"
             app:srcCompat="@drawable/exo_controls_play" />
 
     </FrameLayout>
