--- a/Code/app/src/main/res/layout/itemhashtaganh.xml
+++ b/Code/app/src/main/res/layout/itemhashtaganh.xml
@@ -3,24 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"><![CDATA[
+    android:layout_height="wrap_content">
 
-
-
-
-
-    />
-
-
-
-
-
-
-
-
-    ]]>
-
-    <ImageView
+    <pl.droidsonroids.gif.GifImageView
         android:id="@+id/imgHinhAnhHashtag"
         android:layout_width="125dp"
         android:layout_height="125dp"
@@ -31,7 +16,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
