Fix fragment hashtag text

--- a/Code/app/src/main/res/layout/fragment_hashtag.xml
+++ b/Code/app/src/main/res/layout/fragment_hashtag.xml
@@ -6,12 +6,10 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tvYeuThichHashTag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/hinhanh"
+        android:text="@string/hashtag"
         app:layout_constraintBottom_toTopOf="@+id/listYeuthichHashtag"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +24,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8">
+        app:layout_constraintTop_toBottomOf="@+id/tvYeuThichHashTag">
 
     </android.support.v7.widget.RecyclerView>
 
