--- a/Code/app/src/main/res/layout/fragment_hinhanh.xml
+++ b/Code/app/src/main/res/layout/fragment_hinhanh.xml
@@ -5,6 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tvYeuThichHinhAnh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="@string/hinhanh"
+        />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/List_Yeuthich_HinhAnh"
         android:layout_width="0dp"
@@ -13,5 +23,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tvYeuThichHinhAnh" />
 </android.support.constraint.ConstraintLayout>
