--- a/Code/app/src/main/res/layout/fragment_video.xml
+++ b/Code/app/src/main/res/layout/fragment_video.xml
@@ -6,6 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/tvYeuThichVideo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="@string/video"
+        />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/List_Yeuthich_Video"
         android:layout_width="0dp"
@@ -17,7 +27,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/tvYeuThichVideo">
 
     </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
