--- a/Code/app/src/main/res/layout/comment_item.xml
+++ b/Code/app/src/main/res/layout/comment_item.xml
@@ -2,38 +2,46 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginBottom="5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/imageViewUserAvatar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/member_icon" />
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardViewAvatarUploader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="15dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <ImageView
+            android:id="@+id/imageViewUserAvatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/icon_video_avatar" />
+    </android.support.v7.widget.CardView>
 
     <TextView
         android:id="@+id/textViewUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:text="USERNAME"
         android:textColor="@android:color/background_dark"
-        android:textSize="18dp"
+        android:textSize="12dp"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/imageViewUserAvatar"
-        app:layout_constraintTop_toTopOf="@+id/imageViewUserAvatar" />
+        app:layout_constraintStart_toEndOf="@+id/cardViewAvatarUploader"
+        app:layout_constraintTop_toTopOf="@+id/cardViewAvatarUploader" />
 
     <TextView
         android:id="@+id/textViewUserComment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:padding="10dp"
         android:text="COMMENT"
+        android:textSize="12dp"
         android:textColor="@android:color/background_dark"
-        app:layout_constraintBottom_toBottomOf="@+id/imageViewUserAvatar"
-        app:layout_constraintStart_toEndOf="@+id/imageViewUserAvatar"
+        app:layout_constraintBottom_toBottomOf="@+id/cardViewAvatarUploader"
+        app:layout_constraintStart_toEndOf="@+id/cardViewAvatarUploader"
         app:layout_constraintTop_toBottomOf="@+id/textViewUserName" />
 </android.support.constraint.ConstraintLayout>
